# MMB

CellularAutomata/: CelAut.py
PyTST/: INSTALL.md  README.md  __init__.py  install.sh
PyTST/PyTSTv2/: CPM.py  CPM2.py  adhesion.par  default.par  longcells.par  longcellsux.par  noadhesion.par  roundcells.par  roundcellsko.par  tumor.par
PyTST/example/: angiogenesis_play.par  contract.par  tutorial.ipynb
PyTST/libTST/: .makefile.swp  CMakeLists.txt  CPM.py  CellularPotts2.pro  backupje  bindings.cpp  ca.cpp  ca.h  callbacks.h  cell.cpp  cell.h  cmake_install.cmake  conrec.h  conrec_pytst.cpp  default.txt  dish.cpp  dish.h  exporter.cpp  exporter.h  info.cpp  makefile  misc.h  oude_makefile  parameter.cpp  pde.cpp  pde.h  random.cpp  sorting.cpp
